--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,16 @@
-.DS_Store
 node_modules
-/build
-/.svelte-kit
-/package
+.svelte-kit
+
+dist
+build
+package
+
 .env
 .env.*
+*.local
 !.env.example
-.vercel
-.output
-vite.config.js.timestamp-*
-vite.config.ts.timestamp-*
+
+yarn-error.log
+pnpm-lock.yaml
+
+.DS_Store
