--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
 		"electron-context-menu": "^3.6.1",
 		"electron-reloader": "^1.2.3",
 		"electron-serve": "^1.1.0",
-		"electron-window-state": "^5.0.3"
+		"electron-window-state": "^5.0.3",
+		"vite": "^4.5.3"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-static": "2.0.1",
@@ -52,8 +53,7 @@
 		"svelte-check": "^3.1.4",
 		"svelte-preprocess": "^5.0.3",
 		"tslib": "^2.5.0",
-		"typescript": "^4.9.4",
-		"vite": "^4.0.4"
+		"typescript": "^4.9.4"
 	},
 	"overrides": {
 		"electron": {
