--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,26 @@
 {
 	"extends": "./.svelte-kit/tsconfig.json",
 	"compilerOptions": {
+		"importsNotUsedAsValues": "preserve",
+		"preserveValueImports": true,
 		"module": "esnext",
 		"target": "es2020",
 		"moduleResolution": "node",
 		"strict": true,
-		"types": ["vite/client", "node"],
-		"typeRoots": ["node_modules/@types"],
-		"lib": ["ESNext"],
+		"types": [
+			"vite/client",
+			"node"
+		],
+		"typeRoots": [
+			"node_modules/@types"
+		],
+		"lib": [
+			"ESNext"
+		],
 		/**
 			svelte-preprocess cannot figure out whether you have a value or a type, so tell TypeScript
 			to enforce using \`import type\` instead of \`import\` for Types.
 		*/
-		"importsNotUsedAsValues": "error",
 		"isolatedModules": true,
 		/**
 			To have warnings/errors of the Svelte compiler at the correct position,
@@ -26,10 +34,22 @@
 		"allowJs": true,
 		"checkJs": false,
 		"paths": {
-			"$lib": ["src/lib"],
-			"$lib/*": ["src/lib/*"],
-			"$app/*": [".svelte/dev/runtime/app/*", ".svelte/build/runtime/app/*"]
+			"$lib": [
+				"src/lib"
+			],
+			"$lib/*": [
+				"src/lib/*"
+			],
+			"$app/*": [
+				".svelte/dev/runtime/app/*",
+				".svelte/build/runtime/app/*"
+			]
 		}
 	},
-	"include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.svelte", "src/electron.js"]
+	"include": [
+		"src/**/*.d.ts",
+		"src/**/*.ts",
+		"src/**/*.svelte",
+		"src/electron.js"
+	]
 }
