--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
 		"svelte-check": "^3.1.4",
 		"svelte-preprocess": "^5.0.3",
 		"tslib": "^2.5.0",
-		"typescript": "^4.9.4"
+		"typescript": "^4.9.4",
+		"vitest": "^1.6.0"
 	},
 	"overrides": {
 		"electron": {
