--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
 		"vite": "^4.5.3"
 	},
 	"devDependencies": {
+		"@melt-ui/pp": "^0.3.2",
+		"@melt-ui/svelte": "^0.79.1",
 		"@sveltejs/adapter-static": "2.0.1",
 		"@sveltejs/kit": "1.14.0",
 		"@typescript-eslint/eslint-plugin": "^5.56.0",
