--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"Chrome 89"
 	],
 	"dependencies": {
+		"@tailwindcss/typography": "^0.5.13",
 		"electron-context-menu": "^3.6.1",
 		"electron-reloader": "^1.2.3",
 		"electron-serve": "^1.1.0",
@@ -30,12 +31,14 @@
 		"vite": "^4.5.3"
 	},
 	"devDependencies": {
+		"@iconify/svelte": "^3.0.1",
 		"@melt-ui/pp": "^0.3.2",
 		"@melt-ui/svelte": "^0.79.1",
 		"@sveltejs/adapter-static": "2.0.1",
 		"@sveltejs/kit": "1.14.0",
 		"@typescript-eslint/eslint-plugin": "^5.56.0",
 		"@typescript-eslint/parser": "^5.56.0",
+		"autoprefixer": "^10.4.19",
 		"concurrently": "^7.6.0",
 		"cross-env": "^7.0.3",
 		"dotenv": "^16.0.3",
@@ -48,12 +51,14 @@
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"npm-run-all": "^4.1.5",
+		"postcss": "^8.4.38",
 		"prettier": "^2.8.7",
 		"prettier-plugin-svelte": "^2.10.0",
 		"sass": "^1.60.0",
 		"svelte": "^3.57.0",
 		"svelte-check": "^3.1.4",
 		"svelte-preprocess": "^5.0.3",
+		"tailwindcss": "^3.4.3",
 		"tslib": "^2.5.0",
 		"typescript": "^4.9.4",
 		"vitest": "^1.6.0"
