--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"electron-reloader": "^1.2.3",
 		"electron-serve": "^1.1.0",
 		"electron-window-state": "^5.0.3",
+		"the-new-css-reset": "^1.11.2",
 		"vite": "^4.5.3"
 	},
 	"devDependencies": {
