--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fluentui/react-components": "^9.51.0",
+    "@fluentui/react-nav-preview": "^0.1.0",
     "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.17",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
