--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "encoding-japanese": "^2.1.0",
     "path-browserify": "^1.0.1",
     "react": "^18.3.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "styled-components": "^6.1.11"
