--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "child_process": "^1.0.2",
     "electron-squirrel-startup": "^1.0.1",
     "encoding-japanese": "^2.1.0",
+    "fs-extra": "^11.2.0",
     "path-browserify": "^1.0.1",
     "react": "^18.3.1",
     "react-dnd": "^16.0.1",
