--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@electron-forge/publisher-github": "^7.4.0",
     "@electron/fuses": "^1.8.0",
     "@types/encoding-japanese": "^2.0.5",
+    "@types/markdown-it": "^14.1.1",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
+    "@types/remarkable": "^2.0.8",
+    "@types/turndown": "^5.0.4",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "@vercel/webpack-asset-relocator-loader": "^1.7.3",
@@ -53,7 +56,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@fluentui/react-components": "^9.51.0",
+    "@fluentui/react-components": "^9.51.1",
     "@fluentui/react-nav-preview": "^0.1.0",
     "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.17",
@@ -62,12 +65,18 @@
     "electron-squirrel-startup": "^1.0.1",
     "encoding-japanese": "^2.1.0",
     "fs-extra": "^11.2.0",
+    "markdown-it": "^14.1.0",
     "path-browserify": "^1.0.1",
+    "prosemirror-example-setup": "^1.2.2",
+    "prosemirror-markdown": "^1.12.0",
+    "prosemirror-schema-basic": "^1.2.2",
     "react": "^18.3.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
-    "styled-components": "^6.1.11"
+    "remarkable": "^2.0.1",
+    "styled-components": "^6.1.11",
+    "turndown": "^7.1.3"
   }
 }
