--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "@electron-forge/plugin-webpack": "^7.4.0",
     "@electron-forge/publisher-github": "^7.4.0",
     "@electron/fuses": "^1.8.0",
+    "@types/draftjs-to-html": "^0.8.4",
     "@types/encoding-japanese": "^2.0.5",
+    "@types/html-to-draftjs": "^1.4.3",
     "@types/markdown-it": "^14.1.1",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
+    "@types/react-resizable": "^3.0.7",
     "@types/remarkable": "^2.0.8",
     "@types/turndown": "^5.0.4",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
@@ -61,11 +64,18 @@
     "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.17",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@types/marked": "^6.0.0",
     "child_process": "^1.0.2",
+    "draft-js": "^0.11.7",
+    "draft-js-import-html": "^1.4.1",
+    "draftjs-to-html": "^0.9.1",
     "electron-squirrel-startup": "^1.0.1",
     "encoding-japanese": "^2.1.0",
     "fs-extra": "^11.2.0",
+    "highlight.js": "^11.9.0",
+    "html-to-draftjs": "^1.5.0",
     "markdown-it": "^14.1.0",
+    "marked": "^12.0.2",
     "path-browserify": "^1.0.1",
     "prosemirror-example-setup": "^1.2.2",
     "prosemirror-markdown": "^1.12.0",
@@ -74,7 +84,15 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
+    "react-quill": "^2.0.0",
+    "react-resizable": "^3.0.5",
+    "react-resizeable": "^0.2.6",
     "react-router-dom": "^6.23.1",
+    "react-split": "^2.0.14",
+    "react-split-pane": "^0.1.92",
+    "react-textarea-autosize": "^8.5.3",
+    "remark-markdown": "^0.0.1",
     "remarkable": "^2.0.1",
     "styled-components": "^6.1.11",
     "turndown": "^7.1.3"
