--- a/package.json
+++ b/package.json
@@ -83,11 +83,13 @@
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^9.0.0",
     "encoding-japanese": "^2.1.0",
+    "express": "^4.19.2",
     "fs-extra": "^11.2.0",
     "highlight.js": "^11.9.0",
     "html-to-draftjs": "^1.5.0",
     "markdown-it": "^14.1.0",
     "marked": "^12.0.2",
+    "open": "^10.1.0",
     "path-browserify": "^1.0.1",
     "prosemirror-example-setup": "^1.2.2",
     "prosemirror-markdown": "^1.12.0",
@@ -102,10 +104,10 @@
     "react-resizeable": "^0.2.6",
     "react-router-dom": "^6.23.1",
     "react-split": "^2.0.14",
-    "react-split-pane": "^0.1.92",
     "react-textarea-autosize": "^8.5.3",
     "remark-markdown": "^0.0.1",
     "remarkable": "^2.0.1",
+    "simple-git": "^3.24.0",
     "styled-components": "^6.1.11",
     "turndown": "^7.1.3"
   }
