--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "fs-extra": "^11.2.0",
     "highlight.js": "^11.9.0",
     "html-to-draftjs": "^1.5.0",
+    "keytar": "^7.9.0",
     "markdown-it": "^14.1.0",
     "marked": "^12.0.2",
     "open": "^10.1.0",
