svelte への移行テスト

--- a/package.json
+++ b/package.json
@@ -1,100 +1,76 @@
 {
-  "name": "MarkIn",
-  "productName": "MarkIn",
-  "version": "1.0.4",
-  "description": "My Electron application description",
-  "main": ".webpack/main",
-  "scripts": {
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
-    "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx ."
-  },
-  "devDependencies": {
-    "@electron-forge/cli": "^7.4.0",
-    "@electron-forge/maker-deb": "^7.4.0",
-    "@electron-forge/maker-rpm": "^7.4.0",
-    "@electron-forge/maker-squirrel": "^7.4.0",
-    "@electron-forge/maker-zip": "^7.4.0",
-    "@electron-forge/plugin-auto-unpack-natives": "^7.4.0",
-    "@electron-forge/plugin-fuses": "^7.4.0",
-    "@electron-forge/plugin-webpack": "^7.4.0",
-    "@electron-forge/publisher-github": "^7.4.0",
-    "@electron/fuses": "^1.8.0",
-    "@types/draftjs-to-html": "^0.8.4",
-    "@types/encoding-japanese": "^2.0.5",
-    "@types/html-to-draftjs": "^1.4.3",
-    "@types/markdown-it": "^14.1.1",
-    "@types/react": "^18.3.2",
-    "@types/react-dom": "^18.3.0",
-    "@types/react-resizable": "^3.0.7",
-    "@types/remarkable": "^2.0.8",
-    "@types/turndown": "^5.0.4",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
-    "@vercel/webpack-asset-relocator-loader": "^1.7.3",
-    "autoprefixer": "^10.4.19",
-    "css-loader": "^6.11.0",
-    "electron": "^30.0.4",
-    "electron-builder": "^24.13.3",
-    "eslint": "^8.57.0",
-    "eslint-plugin-import": "^2.29.1",
-    "fork-ts-checker-webpack-plugin": "^7.3.0",
-    "node-loader": "^2.0.0",
-    "node-sass": "^9.0.0",
-    "postcss": "^8.4.38",
-    "sass-loader": "^14.2.1",
-    "style-loader": "^3.3.4",
-    "ts-loader": "^9.5.1",
-    "ts-node": "^10.9.2",
-    "typescript": "~4.5.4"
-  },
-  "keywords": [],
-  "author": {
-    "name": "shiki-01",
-    "email": "0110shiki@gmail.com"
-  },
-  "license": "MIT",
-  "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@fluentui/react-components": "^9.51.1",
-    "@fluentui/react-nav-preview": "^0.1.0",
-    "@mui/icons-material": "^5.15.17",
-    "@mui/material": "^5.15.17",
-    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
-    "@types/marked": "^6.0.0",
-    "child_process": "^1.0.2",
-    "draft-js": "^0.11.7",
-    "draft-js-import-html": "^1.4.1",
-    "draftjs-to-html": "^0.9.1",
-    "electron-squirrel-startup": "^1.0.1",
-    "encoding-japanese": "^2.1.0",
-    "fs-extra": "^11.2.0",
-    "highlight.js": "^11.9.0",
-    "html-to-draftjs": "^1.5.0",
-    "markdown-it": "^14.1.0",
-    "marked": "^12.0.2",
-    "path-browserify": "^1.0.1",
-    "prosemirror-example-setup": "^1.2.2",
-    "prosemirror-markdown": "^1.12.0",
-    "prosemirror-schema-basic": "^1.2.2",
-    "react": "^18.3.1",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^18.3.1",
-    "react-markdown": "^9.0.1",
-    "react-quill": "^2.0.0",
-    "react-resizable": "^3.0.5",
-    "react-resizeable": "^0.2.6",
-    "react-router-dom": "^6.23.1",
-    "react-split": "^2.0.14",
-    "react-split-pane": "^0.1.92",
-    "react-textarea-autosize": "^8.5.3",
-    "remark-markdown": "^0.0.1",
-    "remarkable": "^2.0.1",
-    "styled-components": "^6.1.11",
-    "turndown": "^7.1.3"
-  }
+	"name": "sveltekit-electron",
+	"version": "0.0.1",
+	"private": true,
+	"description": "Minimal Sveltekit + Electron starter template.",
+	"main": "src/electron.cjs",
+	"type": "module",
+	"author": "Braden Wiggins",
+	"scripts": {
+		"dev": "cross-env NODE_ENV=dev npm run dev:all",
+		"dev:all": "concurrently -n=svelte,electron -c='#ff3e00',blue \"npm run dev:svelte\" \"npm run dev:electron\"",
+		"dev:svelte": "vite dev",
+		"dev:electron": "electron src/electron.cjs",
+		"build": "cross-env NODE_ENV=production npm run build:svelte && npm run build:electron",
+		"build:svelte": "vite build",
+		"build:electron": "electron-builder -mwl --config build.config.json"
+	},
+	"engines": {
+		"npm": ">=7",
+		"yarn": "use npm - https://github.com/FractalHQ/sveltekit-electron/issues/12#issuecomment-1068399385"
+	},
+	"browserslist": [
+		"Chrome 89"
+	],
+	"dependencies": {
+		"@iconify/svelte": "^3.0.0",
+		"@tailwindcss/typography": "^0.5.13",
+		"clsx": "^2.1.1",
+		"electron-context-menu": "^3.6.1",
+		"electron-reloader": "^1.2.3",
+		"electron-serve": "^1.1.0",
+		"electron-window-state": "^5.0.3",
+		"icones": "^1.0.0",
+		"iconify": "^1.4.0",
+		"scss": "^0.2.4",
+		"tailwind-merge": "^2.3.0"
+	},
+	"devDependencies": {
+		"@melt-ui/pp": "^0.3.2",
+		"@melt-ui/svelte": "^0.81.0",
+		"@sveltejs/adapter-static": "2.0.1",
+		"@sveltejs/kit": "1.14.0",
+		"@typescript-eslint/eslint-plugin": "^5.56.0",
+		"@typescript-eslint/parser": "^5.56.0",
+		"autoprefixer": "^10.4.19",
+		"concurrently": "^7.6.0",
+		"cross-env": "^7.0.3",
+		"dotenv": "^16.0.3",
+		"electron": "^23.2.0",
+		"electron-builder": "^23.6.0",
+		"electron-connect": "^0.6.3",
+		"electron-packager": "^17.1.1",
+		"electron-updater": "^5.3.0",
+		"eslint": "^8.36.0",
+		"eslint-config-prettier": "^8.8.0",
+		"eslint-plugin-svelte3": "^4.0.0",
+		"flowbite-svelte-icons": "^1.6.1",
+		"npm-run-all": "^4.1.5",
+		"postcss": "^8.4.38",
+		"prettier": "^2.8.7",
+		"prettier-plugin-svelte": "^2.10.0",
+		"sass": "^1.77.4",
+		"svelte": "^3.57.0",
+		"svelte-check": "^3.1.4",
+		"svelte-preprocess": "^5.0.3",
+		"tailwindcss": "^3.4.3",
+		"tslib": "^2.5.0",
+		"typescript": "^4.9.5",
+		"vite": "^4.0.4"
+	},
+	"overrides": {
+		"electron": {
+			"got": "^12.5.1"
+		}
+	}
 }
