--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,45 @@
 {
-  "compilerOptions": {
-    "target": "ES6",
-    "allowJs": true,
-    "module": "commonjs",
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "noImplicitAny": true,
-    "sourceMap": true,
-    "baseUrl": "./src",
-    "outDir": "dist",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "strict": true,
-    "jsx": "react-jsx",
-    "types": ["node"]
-  },
-  "include": ["src/**/*"]
+    "extends": "./.svelte-kit/tsconfig.json",
+    "compilerOptions": {
+        "module": "esnext",
+        "target": "es2020",
+        "moduleResolution": "node",
+        "strict": true,
+        "types": [
+            "vite/client",
+            "node"
+        ],
+        "typeRoots": [
+            "node_modules/@types"
+        ],
+        "lib": [
+            "ESNext"
+        ],
+        "isolatedModules": true,
+        "sourceMap": true,
+        "esModuleInterop": true,
+        "skipLibCheck": true,
+        "forceConsistentCasingInFileNames": true,
+        "baseUrl": ".",
+        "allowJs": true,
+        "checkJs": false,
+        "paths": {
+            "$lib": [
+                "src/lib"
+            ],
+            "$lib/*": [
+                "src/lib/*"
+            ],
+            "$app/*": [
+                ".svelte/dev/runtime/app/*",
+                ".svelte/build/runtime/app/*"
+            ]
+        }
+    },
+    "include": [
+        "src/**/*.d.ts",
+        "src/**/*.ts",
+        "src/**/*.svelte",
+        "src/electron.js"
+    ]
 }
