--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"icones": "^1.0.0",
 		"iconify": "^1.4.0",
 		"scss": "^0.2.4",
+		"svelte-routing": "^2.13.0",
 		"tailwind-merge": "^2.3.0"
 	},
 	"devDependencies": {
@@ -54,6 +55,8 @@
 		"eslint": "^8.36.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"flowbite": "^2.3.0",
+		"flowbite-svelte": "^0.46.1",
 		"flowbite-svelte-icons": "^1.6.1",
 		"npm-run-all": "^4.1.5",
 		"postcss": "^8.4.38",
