--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
 		"electron-window-state": "^5.0.3",
 		"icones": "^1.0.0",
 		"iconify": "^1.4.0",
+		"lucide-svelte": "^0.383.0",
+		"paneforge": "^0.0.4",
 		"scss": "^0.2.4",
 		"svelte-routing": "^2.13.0",
-		"tailwind-merge": "^2.3.0"
+		"tailwind-merge": "^2.3.0",
+		"tailwind-variants": "^0.2.1"
 	},
 	"devDependencies": {
 		"@melt-ui/pp": "^0.3.2",
