--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"electron-reloader": "^1.2.3",
 		"electron-serve": "^1.1.0",
 		"electron-window-state": "^5.0.3",
+		"eslint-plugin-svelte": "^2.39.0",
 		"icones": "^1.0.0",
 		"iconify": "^1.4.0",
 		"lucide-svelte": "^0.383.0",
@@ -42,8 +43,8 @@
 	"devDependencies": {
 		"@melt-ui/pp": "^0.3.2",
 		"@melt-ui/svelte": "^0.81.0",
-		"@sveltejs/adapter-static": "2.0.1",
-		"@sveltejs/kit": "1.14.0",
+		"@sveltejs/adapter-static": "^3.0.1",
+		"@sveltejs/kit": "^2.5.10",
 		"@typescript-eslint/eslint-plugin": "^5.56.0",
 		"@typescript-eslint/parser": "^5.56.0",
 		"autoprefixer": "^10.4.19",
@@ -57,22 +58,20 @@
 		"electron-updater": "^5.3.0",
 		"eslint": "^8.36.0",
 		"eslint-config-prettier": "^8.8.0",
-		"eslint-plugin-svelte3": "^4.0.0",
 		"flowbite": "^2.3.0",
 		"flowbite-svelte": "^0.46.1",
 		"flowbite-svelte-icons": "^1.6.1",
 		"npm-run-all": "^4.1.5",
 		"postcss": "^8.4.38",
 		"prettier": "^2.8.7",
-		"prettier-plugin-svelte": "^2.10.0",
 		"sass": "^1.77.4",
-		"svelte": "^3.57.0",
-		"svelte-check": "^3.1.4",
+		"svelte": "^4.2.17",
+		"svelte-check": "^3.8.0",
 		"svelte-preprocess": "^5.0.3",
 		"tailwindcss": "^3.4.3",
 		"tslib": "^2.5.0",
-		"typescript": "^4.9.5",
-		"vite": "^4.0.4"
+		"typescript": "^5.4.5",
+		"vite": "^5.2.12"
 	},
 	"overrides": {
 		"electron": {
