--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 	"dependencies": {
 		"@iconify/svelte": "^3.0.0",
 		"@tailwindcss/typography": "^0.5.13",
+		"bits-ui": "^0.21.10",
 		"clsx": "^2.1.1",
 		"electron-context-menu": "^3.6.1",
 		"electron-reloader": "^1.2.3",
