--- a/package.json
+++ b/package.json
@@ -23,10 +23,16 @@
 		"Chrome 89"
 	],
 	"dependencies": {
+		"@cartamd/plugin-attachment": "^4.0.2",
+		"@cartamd/plugin-code": "^4.0.5",
+		"@cartamd/plugin-emoji": "^4.0.2",
+		"@cartamd/plugin-slash": "^4.0.2",
 		"@iconify/svelte": "^3.0.0",
 		"@tailwindcss/typography": "^0.5.13",
 		"bits-ui": "^0.21.10",
+		"carta-md": "^4.2.0",
 		"clsx": "^2.1.1",
+		"dompurify": "^3.1.5",
 		"electron-context-menu": "^3.6.1",
 		"electron-reloader": "^1.2.3",
 		"electron-serve": "^1.1.0",
@@ -35,17 +41,22 @@
 		"icones": "^1.0.0",
 		"iconify": "^1.4.0",
 		"lucide-svelte": "^0.383.0",
+		"marked": "^12.0.2",
 		"paneforge": "^0.0.4",
+		"quill": "^2.0.2",
 		"scss": "^0.2.4",
 		"svelte-routing": "^2.13.0",
 		"tailwind-merge": "^2.3.0",
-		"tailwind-variants": "^0.2.1"
+		"tailwind-variants": "^0.2.1",
+		"turndown": "^7.2.0"
 	},
 	"devDependencies": {
 		"@melt-ui/pp": "^0.3.2",
 		"@melt-ui/svelte": "^0.81.0",
 		"@sveltejs/adapter-static": "^3.0.1",
 		"@sveltejs/kit": "^2.5.10",
+		"@types/dompurify": "^3.0.5",
+		"@types/turndown": "^5.0.4",
 		"@typescript-eslint/eslint-plugin": "^5.56.0",
 		"@typescript-eslint/parser": "^5.56.0",
 		"autoprefixer": "^10.4.19",
