--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"electron-serve": "^1.1.0",
 		"electron-window-state": "^5.0.3",
 		"eslint-plugin-svelte": "^2.39.0",
+		"highlight.js": "^11.9.0",
 		"icones": "^1.0.0",
 		"iconify": "^1.4.0",
 		"lucide-svelte": "^0.383.0",
