--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
 		"@cartamd/plugin-code": "^4.0.5",
 		"@cartamd/plugin-emoji": "^4.0.2",
 		"@cartamd/plugin-slash": "^4.0.2",
+		"@electron-forge/maker-deb": "^7.4.0",
+		"@electron-forge/maker-rpm": "^7.4.0",
+		"@electron-forge/maker-squirrel": "^7.4.0",
+		"@electron-forge/maker-zip": "^7.4.0",
+		"@electron-forge/plugin-webpack": "^7.4.0",
 		"@iconify/svelte": "^3.0.0",
 		"@tailwindcss/typography": "^0.5.13",
 		"bits-ui": "^0.21.10",
@@ -52,6 +57,7 @@
 		"turndown": "^7.2.0"
 	},
 	"devDependencies": {
+		"@electron-forge/publisher-github": "^7.4.0",
 		"@melt-ui/pp": "^0.3.2",
 		"@melt-ui/svelte": "^0.81.0",
 		"@sveltejs/adapter-static": "^3.0.1",
@@ -74,6 +80,7 @@
 		"flowbite": "^2.3.0",
 		"flowbite-svelte": "^0.46.1",
 		"flowbite-svelte-icons": "^1.6.1",
+		"fork-ts-checker-webpack-plugin": "^9.0.2",
 		"npm-run-all": "^4.1.5",
 		"postcss": "^8.4.38",
 		"prettier": "^2.8.7",
