--- a/package.json
+++ b/package.json
@@ -1,105 +1,109 @@
 {
-	"name": "markin",
-	"productName": "MarkIn",
-	"version": "1.0.5",
-	"description": "My Electron application description",
-	"main": "src/electron.cjs",
-	"type": "module",
-	"author": "Braden Wiggins",
-	"scripts": {
-		"dev": "cross-env NODE_ENV=dev npm run dev:all",
-		"dev:all": "concurrently -n=svelte,electron -c='#ff3e00',blue \"npm run dev:svelte\" \"npm run dev:electron\"",
-		"dev:svelte": "vite dev",
-		"dev:electron": "electron src/electron.cjs",
-		"build": "cross-env NODE_ENV=production npm run build:svelte && npm run build:electron",
-		"build:svelte": "vite build",
-		"build:electron": "electron-builder -mwl --config build.config.json",
-		"start": "electron-forge start",
-		"package": "electron-forge package",
-		"make": "electron-forge make",
-		"publish": "electron-forge publish"
-	},
-	"engines": {
-		"npm": ">=7",
-		"yarn": "use npm - https://github.com/FractalHQ/sveltekit-electron/issues/12#issuecomment-1068399385"
-	},
-	"browserslist": [
-		"Chrome 89"
-	],
-	"dependencies": {
-		"@cartamd/plugin-attachment": "^4.0.2",
-		"@cartamd/plugin-code": "^4.0.5",
-		"@cartamd/plugin-emoji": "^4.0.2",
-		"@cartamd/plugin-slash": "^4.0.2",
-		"@electron-forge/maker-deb": "^7.4.0",
-		"@electron-forge/maker-rpm": "^7.4.0",
-		"@electron-forge/maker-squirrel": "^7.4.0",
-		"@electron-forge/maker-zip": "^7.4.0",
-		"@electron-forge/plugin-webpack": "^7.4.0",
-		"@iconify/svelte": "^3.0.0",
-		"@tailwindcss/typography": "^0.5.13",
-		"bits-ui": "^0.21.10",
-		"carta-md": "^4.2.0",
-		"clsx": "^2.1.1",
-		"dompurify": "^3.1.5",
-		"electron-context-menu": "^3.6.1",
-		"electron-reloader": "^1.2.3",
-		"electron-serve": "^1.1.0",
-		"electron-window-state": "^5.0.3",
-		"eslint-plugin-svelte": "^2.39.0",
-		"highlight.js": "^11.9.0",
-		"icones": "^1.0.0",
-		"iconify": "^1.4.0",
-		"lucide-svelte": "^0.383.0",
-		"marked": "^12.0.2",
-		"paneforge": "^0.0.4",
-		"quill": "^2.0.2",
-		"scss": "^0.2.4",
-		"svelte-routing": "^2.13.0",
-		"tailwind-merge": "^2.3.0",
-		"tailwind-variants": "^0.2.1",
-		"turndown": "^7.2.0"
-	},
-	"devDependencies": {
-		"@electron-forge/publisher-github": "^7.4.0",
-		"@melt-ui/pp": "^0.3.2",
-		"@melt-ui/svelte": "^0.81.0",
-		"@sveltejs/adapter-static": "^3.0.1",
-		"@sveltejs/kit": "^2.5.10",
-		"@types/dompurify": "^3.0.5",
-		"@types/turndown": "^5.0.4",
-		"@typescript-eslint/eslint-plugin": "^5.56.0",
-		"@typescript-eslint/parser": "^5.56.0",
-		"autoprefixer": "^10.4.19",
-		"concurrently": "^7.6.0",
-		"cross-env": "^7.0.3",
-		"dotenv": "^16.0.3",
-		"electron": "^23.2.0",
-		"electron-builder": "^23.6.0",
-		"electron-connect": "^0.6.3",
-		"electron-packager": "^17.1.1",
-		"electron-updater": "^5.3.0",
-		"eslint": "^8.36.0",
-		"eslint-config-prettier": "^8.8.0",
-		"flowbite": "^2.3.0",
-		"flowbite-svelte": "^0.46.1",
-		"flowbite-svelte-icons": "^1.6.1",
-		"fork-ts-checker-webpack-plugin": "^9.0.2",
-		"npm-run-all": "^4.1.5",
-		"postcss": "^8.4.38",
-		"prettier": "^2.8.7",
-		"sass": "^1.77.4",
-		"svelte": "^4.2.17",
-		"svelte-check": "^3.8.0",
-		"svelte-preprocess": "^5.0.3",
-		"tailwindcss": "^3.4.3",
-		"tslib": "^2.5.0",
-		"typescript": "^5.4.5",
-		"vite": "^5.2.12"
-	},
-	"overrides": {
-		"electron": {
-			"got": "^12.5.1"
-		}
-	}
+  "name": "markin",
+  "productName": "MarkIn",
+  "version": "1.0.5",
+  "description": "My Electron application description",
+  "main": "src/electron.cjs",
+  "type": "module",
+  "author": "Braden Wiggins",
+  "scripts": {
+    "dev": "cross-env NODE_ENV=dev npm run dev:all",
+    "dev:all": "concurrently -n=svelte,electron -c='#ff3e00',blue \"npm run dev:svelte\" \"npm run dev:electron\"",
+    "dev:svelte": "vite dev",
+    "dev:electron": "electron src/electron.cjs",
+    "build": "cross-env NODE_ENV=production npm run build:svelte && npm run build:electron",
+    "build:svelte": "vite build",
+    "build:electron": "electron-builder -mwl --config build.config.json",
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "publish": "electron-forge publish"
+  },
+  "engines": {
+    "npm": ">=7",
+    "yarn": "use npm - https://github.com/FractalHQ/sveltekit-electron/issues/12#issuecomment-1068399385"
+  },
+  "browserslist": [
+    "Chrome 89"
+  ],
+  "dependencies": {
+    "@cartamd/plugin-attachment": "^4.0.2",
+    "@cartamd/plugin-code": "^4.0.5",
+    "@cartamd/plugin-emoji": "^4.0.2",
+    "@cartamd/plugin-slash": "^4.0.2",
+    "@electron-forge/plugin-webpack": "^7.4.0",
+    "@iconify/svelte": "^3.0.0",
+    "@tailwindcss/typography": "^0.5.13",
+    "bits-ui": "^0.21.10",
+    "carta-md": "^4.2.0",
+    "clsx": "^2.1.1",
+    "dompurify": "^3.1.5",
+    "electron-context-menu": "^3.6.1",
+    "electron-reloader": "^1.2.3",
+    "electron-serve": "^1.1.0",
+    "electron-squirrel-startup": "^1.0.1",
+    "electron-window-state": "^5.0.3",
+    "eslint-plugin-svelte": "^2.39.0",
+    "highlight.js": "^11.9.0",
+    "icones": "^1.0.0",
+    "iconify": "^1.4.0",
+    "lucide-svelte": "^0.383.0",
+    "marked": "^12.0.2",
+    "paneforge": "^0.0.4",
+    "quill": "^2.0.2",
+    "scss": "^0.2.4",
+    "svelte-routing": "^2.13.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwind-variants": "^0.2.1",
+    "turndown": "^7.2.0"
+  },
+  "devDependencies": {
+    "@electron-forge/cli": "^7.4.0",
+    "@electron-forge/maker-deb": "^7.4.0",
+    "@electron-forge/maker-rpm": "^7.4.0",
+    "@electron-forge/maker-squirrel": "^7.4.0",
+    "@electron-forge/maker-zip": "^7.4.0",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.4.0",
+    "@electron-forge/plugin-fuses": "^7.4.0",
+    "@electron-forge/publisher-github": "^7.4.0",
+    "@electron/fuses": "^1.8.0",
+    "@melt-ui/pp": "^0.3.2",
+    "@melt-ui/svelte": "^0.81.0",
+    "@sveltejs/adapter-static": "^3.0.1",
+    "@sveltejs/kit": "^2.5.10",
+    "@types/dompurify": "^3.0.5",
+    "@types/turndown": "^5.0.4",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
+    "autoprefixer": "^10.4.19",
+    "concurrently": "^7.6.0",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.0.3",
+    "electron": "^23.2.0",
+    "electron-connect": "^0.6.3",
+    "electron-packager": "^17.1.1",
+    "electron-updater": "^5.3.0",
+    "eslint": "^8.36.0",
+    "eslint-config-prettier": "^8.8.0",
+    "flowbite": "^2.3.0",
+    "flowbite-svelte": "^0.46.1",
+    "flowbite-svelte-icons": "^1.6.1",
+    "fork-ts-checker-webpack-plugin": "^9.0.2",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.38",
+    "prettier": "^2.8.7",
+    "sass": "^1.77.4",
+    "svelte": "^4.2.17",
+    "svelte-check": "^3.8.0",
+    "svelte-preprocess": "^5.0.3",
+    "tailwindcss": "^3.4.3",
+    "tslib": "^2.5.0",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.12"
+  },
+  "overrides": {
+    "electron": {
+      "got": "^12.5.1"
+    }
+  }
 }
